<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.maxfilippi.myblognote.activity.EditNoteActivity"
    tools:showIn="@layout/activity_edit_note"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <include layout="@layout/custom_edit_text_tools"/>


    <ScrollView
        android:id="@+id/edit_note_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:paddingTop="@dimen/list_activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/edit_activity_horizontal_margin"
            android:paddingRight="@dimen/edit_activity_horizontal_margin">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_note_input_edit_text_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_title"
                    android:maxLines="1"
                    android:lines="1"
                    android:inputType="textEmailSubject|textFilter|textNoSuggestions"
                    android:ellipsize="end"/>


            </android.support.design.widget.TextInputLayout>




            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_activity_vertical_margin">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_note_input_edit_text_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_date"
                    android:maxLines="1"
                    android:lines="1"
                    android:inputType="date|textFilter|textNoSuggestions"
                    android:ellipsize="end"
                    android:focusableInTouchMode="false"/>


            </android.support.design.widget.TextInputLayout>




            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_activity_vertical_margin">


                <com.maxfilippi.myblognote.utils.TextInputRichEditText
                    android:id="@+id/edit_note_input_edit_text_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_content"
                    android:inputType="textMultiLine|textNoSuggestions"
                    android:scrollHorizontally="false"
                    android:scrollbars="vertical"
                    android:ellipsize="none"
                    android:maxLines="100"/>


            </android.support.design.widget.TextInputLayout>





        </LinearLayout>

    </ScrollView>

</LinearLayout>



